--- a/css/styles.css
+++ b/css/styles.css
@@ -275,9 +275,7 @@ body {
         grid-template-columns: repeat(6, 1fr);
         grid-column-gap: 1rem; } 
     @media only screen and (max-width: 37.5em){
-            grid-template-columns: min-content max-content;
-            }
-}
+            grid-template-columns: min-content max-content}}
   .realtors__img {
     display: block;
     width: 7rem;
