--- a/css/styles.css
+++ b/css/styles.css
@@ -147,7 +147,7 @@ body {
 
 .header {
   grid-column: full-start / col-end 6;
-  background-image: linear-gradient(rgba(16, 29, 44, 0.9), rgba(16, 29, 44, 0.9)), url(../img/hero.jpeg);
+  background-image: linear-gradient(rgba(16, 29, 44, 0.9), rgba(16, 29, 44, 0.9)), url(.../img/hero.jpeg);
   background-size: cover;
   background-position: center;
   padding-top: 4rem;
