--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,11 @@ body {
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
   @media only screen and (max-width: 62.5em) {
     .container {
-      grid-template-rows: 6rem 80vh min-content min-content repeat(3, min-content);
+      grid-template-rows: 6rem 80vh;
       grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
   @media only screen and (max-width: 50em) {
     .container {
       grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content min-content repeat(3, min-content); } }
-
 
 .features {
   grid-column: center-start / center-end;
@@ -160,6 +159,9 @@ body {
   @media only screen and (max-width: 50em) {
     .header {
       grid-column: 1/-1; } }
+  @media only screen and (max-width: 37.5em) {
+    .header {
+      padding-bottom: 5rem; } }
   .header .heading-1, .header .heading-3 {
     justify-self: center;
     padding: 0 10%; }
@@ -273,10 +275,9 @@ body {
     align-items: center; }
     @media only screen and (max-width: 50em) {
       .realtors__list {
-        grid-template-columns: repeat(6, 1fr);
-        grid-column-gap: 1rem; } 
-    }
- @media only screen and (max-width: 37.5em) {
+        grid-template-columns: repeat(3, min-content max-content);
+        grid-column-gap: 1rem; } }
+    @media only screen and (max-width: 37.5em) {
       .realtors__list {
         grid-template-columns: min-content max-content; } }
   .realtors__img {
@@ -293,8 +294,6 @@ body {
   grid-column: sidebar-start / sidebar-end;
   grid-row: 1 / -1;
   display: flex;
-  position: relative; 
-  z-index: 10;
   justify-content: center; }
   @media only screen and (max-width: 62.5em) {
     .sidebar {
@@ -308,8 +307,6 @@ body {
   background-color: #fff;
   width: 4.5rem;
   height: 0.2rem;
-  position: relative;
-  z-index: 20;
   margin-top: 3rem; }
   .nav-btn::before, .nav-btn::after {
     content: "";
@@ -329,7 +326,6 @@ body {
   background-color: #c69963;
   grid-column: full-start / col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(./img/back.jpg);
-  background-size: cover; 
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
@@ -440,3 +436,4 @@ body {
 
 .mb-hg {
   margin-bottom: 8rem; }
+
